<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pet_LBL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/title_pet_profile"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/dark_main"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pet_LBL_title">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/create_LBL_title"
                android:orientation="vertical"
                android:paddingStart="60dp"
                android:paddingTop="10dp"
                android:paddingEnd="60dp"
                android:scrollbars="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pet_IMG_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_profile"
                    app:civ_border_color="#80595959"
                    app:civ_border_width="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pet_BTN_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/upload_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:textSize="15sp"
                    app:strokeColor="@color/colorPrimaryDark"
                    android:textAllCaps="false" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pet_EDT_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Gender"
                    android:textSize="12dp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/pet_SP_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="250dp"
                    android:entries="@array/Gender"
                    android:padding="10dp"/>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pet_EDT_date_of_birth"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date of Birth"
                    android:enabled="false"
                    android:layout_weight="1">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pet_BTN_date_of_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.Material3.Button.IconButton"
                    app:icon="@drawable/ic_calendar"
                    app:iconSize="35dp"
                    android:textAllCaps="false" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pet_EDT_food_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Food Type">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pet_EDT_food_amount"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Amount"
                        android:inputType="numberDecimal"
                        android:layout_weight="1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pet_EDT_food_unit"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Units"
                        android:layout_weight="1">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Regular Meals"
                            android:textSize="12dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/pet_BTN_add_meal"
                            android:layout_width="60dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="+"
                            style="@style/Widget.Material3.Button.OutlinedButton"
                            android:textSize="10sp"
                            app:strokeColor="@color/colorPrimaryDark"
                            android:textAllCaps="false"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Regular Walks"
                            android:textSize="12dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/pet_BTN_add_walk"
                            android:layout_width="60dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="+"
                            style="@style/Widget.Material3.Button.OutlinedButton"
                            android:textSize="10sp"
                            app:strokeColor="@color/colorPrimaryDark"
                            android:textAllCaps="false" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pet_BTN_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/save_button"
                    android:textAllCaps="false" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>